--- a/test/index.html
+++ b/test/index.html
@@ -19,6 +19,6 @@
 </head>
 <body>
     <canvas id="game_canvas" width="375" height="667"></canvas>
-    <script src="game.js"></script>
+    <script type="module" src="game.js"></script>
 </body>
 </html>
